public class Sensor {
    public boolean isPersonClose() {
        // Implementation for checking proximity
        return true;
    }
}