public class Timer {
    public void register(long timeOut, Door callback) {
        // Implementation for registering timeout callback
    }
}
