public interface Lockable {
    void lock();
    void unlock();
}